About part done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -24,9 +24,9 @@
     </div>
     <div class="navbar2">
         <ul>
-            <li><a href="...">Home</a></li>
-            <li><a href="...">About</a></li>
-            <li><a href="...">Contact</a></li>      
+            <li ><a href="..." id="Home_t">Home</a></li>
+            <li><a href="./assets/pages/About.html" id="About_t">About Customers</a></li>
+            <li><a href="..." id="Contact_t">Contact</a></li>      
         </ul>
     </div>
     <div class="searcher">
